--- a/schema/templates/schema/negativesize_detail.html
+++ b/schema/templates/schema/negativesize_detail.html
@@ -1,7 +1,12 @@
 {% extends "detail.html" %}
+{% load static %}
 
 {% block content %}
 <table class="table table-hover">
+  <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
+        href="#">Summary</a></th>
+  </tr>
   <tr>
     <td>Name</td>
     <td>{{ object.name }}</td>
@@ -36,6 +41,11 @@
     <td>{{ object.aspect_ratio }}</td>
   </tr>
   {% endif %}
+  
+  <tr>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
+  </tr>
   {% if history %}
   <tr>
     <td>Edit history</td>
@@ -46,5 +56,6 @@
 {% endblock %}
 
 {% block moreactions %}
-<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?negative_size={{ object.id }}" role="button">View camera models with this negative size</a></li>
+<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?negative_size={{ object.id }}" role="button">View
+    camera models with this negative size</a></li>
 {% endblock %}
