--- a/schema/templates/schema/paperstock_detail.html
+++ b/schema/templates/schema/paperstock_detail.html
@@ -1,8 +1,13 @@
 {% extends "detail.html" %}
+{% load static %}
 {% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
+  <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
+        href="#">Summary</a></th>
+  </tr>
   <tr>
     <td>Name</td>
     <td>{{ object.name }}</td>
@@ -32,7 +37,8 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2" id="misc"><a href="#misc">Misc</a></th>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
   </tr>
   {% if object.tags.all %}
   <tr>
