--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -18,8 +18,8 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2" id="physical"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Physical"> <a
-        href="#physical">Physical</a></th>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
+        href="#">Summary</a></th>
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -48,6 +48,27 @@
     <td>{{ object.disambiguation }}</td>
   </tr>
   {% endif %}
+  {% if object.introduced is not None %}
+  <tr>
+    <td>Marketed</td>
+    <td>{{ object.introduced }}{% if object.discontinued is not None %}-{{ object.discontinued }}{% endif %}</td>
+  </tr>
+  {% endif %}
+  {% if object.format is not None %}
+  <tr>
+    <td>Format</td>
+    <td><a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>
+    </td>
+  </tr>
+  {% endif %}
+  {% if object.negative_size is not None %}
+  <tr>
+    <td>Negative size</td>
+    <td><a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a></td>
+  </tr>
+  {% endif %}
+
+
   {% if object.mount is not None %}
   <tr>
     <td>Mount</td>
@@ -60,8 +81,6 @@
       {% endif %}{{ object.lens_model_name|aperture }}
     </td>
   </tr>
-
-
   {% if object.lens_manufacturer is not None %}
   <tr>
     <td>Lens manufacturer</td>
@@ -141,8 +160,6 @@
     <td>{{ object.magnification }}&times;</td>
   </tr>
   {% endif %}
-  {% if object.negative_size is not None %}
-  {% endif %}
   {% if object.aperture_blades is not None %}
   <tr>
     <td>Aperture blades</td>
@@ -173,22 +190,13 @@
     <td>{{ object.hood }}</td>
   </tr>
   {% endif %}
+  {% endif %}
 
 
-  {% endif %}
-  {% if object.format is not None %}
   <tr>
-    <td>Format</td>
-    <td><a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>
-    </td>
+    <th colspan="2" id="physical"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Physical"> <a
+        href="#physical">Physical</a></th>
   </tr>
-  {% endif %}
-  {% if object.introduced is not None %}
-  <tr>
-    <td>Marketed</td>
-    <td>{{ object.introduced }}{% if object.discontinued is not None %}-{{ object.discontinued }}{% endif %}</td>
-  </tr>
-  {% endif %}
   {% if object.body_type is not None %}
   <tr>
     <td>Body type</td>
@@ -201,13 +209,6 @@
     <td>{{ object.weight }}g</td>
   </tr>
   {% endif %}
-  {% if object.negative_size is not None %}
-  <tr>
-    <td>Negative size</td>
-    <td><a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a></td>
-  </tr>
-  {% endif %}
-
 
 
   <tr>
@@ -257,7 +258,15 @@
     <td>{{ object.meter_min_ev }}-{{ object.meter_max_ev }}</td>
   </tr>
   {% endif %}
-  {% if object.metering_modes is not None %}
+  {% if object.min_iso is not None %}
+  <tr>
+    <td>ISO</td>
+    <td>{{ object.min_iso }}-{{ object.max_iso }}</td>
+  </tr>
+  {% endif %}
+  {% endif %}
+
+  {% if object.metering_modes.all %}
   <tr>
     <td>Metering modes</td>
     <td>
@@ -268,14 +277,7 @@
     </td>
   </tr>
   {% endif %}
-  {% endif %}
-  {% if object.min_iso is not None %}
-  <tr>
-    <td>ISO</td>
-    <td>{{ object.min_iso }}-{{ object.max_iso }}</td>
-  </tr>
-  {% endif %}
-  {% if object.exposure_programs is not None %}
+  {% if object.exposure_programs.all %}
   <tr>
     <td>Exposure programs</td>
     <td>
@@ -304,6 +306,13 @@
     <td>{{ object.shutter_model }}</td>
   </tr>
   {% endif %}
+  {% if object.fastest_shutter_speed is not None %}
+  <tr>
+    <td>Shutter speeds</td>
+    <td>{{ object.fastest_shutter_speed }}{% if object.slowest_shutter_speed is not None %} -
+      {{ object.slowest_shutter_speed }}{% endif %}</td>
+  </tr>
+  {% endif %}
   {% if object.bulb is not None %}
   <tr>
     <td>Bulb</td>
@@ -314,13 +323,6 @@
   <tr>
     <td>Time</td>
     <td>{{ object.time|boolicontag }}</td>
-  </tr>
-  {% endif %}
-  {% if object.fastest_shutter_speed is not None %}
-  <tr>
-    <td>Shutter speeds</td>
-    <td>{{ object.fastest_shutter_speed }}{% if object.slowest_shutter_speed is not None %} -
-      {{ object.slowest_shutter_speed }}{% endif %}</td>
   </tr>
   {% endif %}
 
@@ -483,7 +485,7 @@
     <th colspan="2" id="misc"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Misc"> <a
         href="#misc">Misc</a></th>
   </tr>
-  {% if object.notes is not None %}
+  {% if object.notes %}
   <tr>
     <td>Notes</td>
     <td>{{ object.notes|linebreaks }}</td>
@@ -495,6 +497,11 @@
     <td><a href="{{ object.url }}">{{ object.url }}</a></td>
   </tr>
   {% endif %}
+
+  <tr>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
+  </tr>
   {% if object.tags.all %}
   <tr>
     <td>Tags</td>
@@ -552,12 +559,16 @@
 {% endblock %}
 
 {% block moreactions %}
-<li><form action="{% url 'camera-create' %}">
-  <input type="hidden" name="cameramodel" value="{{ object.id }}">
-  <button class="btn btn-primary" type="submit">Add to collection</button>
-</form></li>
-<li><form action="{% url 'cameramodel-create' %}">
-  <input type="hidden" name="clone" value="{{ object.slug }}">
-  <button class="btn btn-primary" type="submit">Clone this camera model</button>
-</form></li>
+<li>
+  <form action="{% url 'camera-create' %}">
+    <input type="hidden" name="cameramodel" value="{{ object.id }}">
+    <button class="btn btn-primary" type="submit">Add to collection</button>
+  </form>
+</li>
+<li>
+  <form action="{% url 'cameramodel-create' %}">
+    <input type="hidden" name="clone" value="{{ object.slug }}">
+    <button class="btn btn-primary" type="submit">Clone this camera model</button>
+  </form>
+</li>
 {% endblock %}
