--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -1,8 +1,13 @@
 {% extends "detail.html" %}
+{% load static %}
 {% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
+  <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
+        href="#">Summary</a></th>
+  </tr>
   <tr>
     <td>Mount</td>
     <td>{{ object.mount }}</td>
@@ -38,7 +43,8 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2" id="misc"><a href="#misc">Misc</a></th>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
   </tr>
   {% if object.tags.all %}
   <tr>
@@ -74,6 +80,8 @@
 {% endblock %}
 
 {% block moreactions %}
-<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?mount={{ mount.id }}" role="button">View camera models with this mount</a></li>
-<li><a class="btn btn-primary" href="{% url 'lensmodel-list' %}?mount={{ mount.id }}" role="button">View lens models with this mount</a></li>
+<li><a class="btn btn-primary" href="{% url 'cameramodel-list' %}?mount={{ mount.id }}" role="button">View camera models
+    with this mount</a></li>
+<li><a class="btn btn-primary" href="{% url 'lensmodel-list' %}?mount={{ mount.id }}" role="button">View lens models
+    with this mount</a></li>
 {% endblock %}
