--- a/schema/templates/schema/order_detail.html
+++ b/schema/templates/schema/order_detail.html
@@ -1,7 +1,12 @@
 {% extends "detail.html" %}
+{% load static %}
 
 {% block content %}
 <table class="table table-hover">
+  <tr>
+    <th colspan="2" id="summary"><img src="{% static "svg/summary.svg" %}" width="30" height="30" alt="Summary">&nbsp;<a
+        href="#">Summary</a></th>
+  </tr>
   {% if object.negative is not None %}
   <tr>
     <td>Negative</td>
