--- a/schema/templates/schema/toner_detail.html
+++ b/schema/templates/schema/toner_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load static %}
 
 {% block content %}
 <table class="table table-hover">
@@ -25,7 +26,8 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2" id="misc"><a href="#misc">Misc</a></th>
+    <th colspan="2" id="meta"><img src="{% static "svg/tag.svg" %}" width="30" height="30" alt="Meta">&nbsp;<a
+        href="#meta">Meta</a></th>
   </tr>
   {% if object.tags.all %}
   <tr>
